--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SettingsActivity"></activity>
+        <activity android:name=".FoodplanDetailActivity"></activity>
         <activity android:name=".LoginActivity" />
         <activity android:name=".FoodDetailActivity" />
         <activity android:name=".FoodListActivity" />
